# Cpp-VPN-Core

./: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Client_Manager.cpp  Client_Manager.h  Dockerfile  Encryption.cpp  Encryption.h  LICENSE  README.md  UPGRADES.md  build.ps1  handshake.h  main.cpp  min_erver.cpp  min_server_client_manager.cpp  perf_hook_full.c  util  utils.h  version.h.in  vpn_server
clients/windows/: CMakeLists.txt  main.cpp
crypto/: DiffieHellman.h  XorCipher.cpp  XorCipher.h
net/socket/: SocketManager.cpp  SocketManager.h
net/tun/: TunDevice.cpp  TunDevice.h
protocol/: Handshake.cpp  Handshake.h
scripts/: analyze_vpn_log.py  runbuild.sh
sessions/client/: Client_Manager.cpp  Client_Manager.h
sessions/session/: ClientSession.cpp  ClientSession.h
utils/: counter_definition.cpp  counter_definition.h  logger.cpp  logger.h  profiling.h
vpn_client/: CMakeLists.txt  FUTURE_IMPROVEMENTS.md  README.md  vpn_client.cpp
